# dova

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/dova/: __init__.py  cli.py
src/dova/cli/: __init__.py  _context.py  _initialize.py  daemon.py  project.py  self.py  task.py
src/dova/core/: errors.py  logging.py  repo.py
src/dova/daemon/: communication.py  controller.py  main.py
