[project]
name = "dova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HomerusJa", email = "jakob@schluse.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dova = "dova:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
