[project]
name = "dova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HomerusJa", email = "jakob@schluse.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.3",
]

[project.scripts]
dova = "dova.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
