[project]
name = "dova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HomerusJa", email = "jakob@schluse.com" }
]
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.0.0",
    "typer>=0.15.3",
]

[project.scripts]
dova = "dova.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "W",   # pycodestyle warnings
  "T20",
]

[tool.ruff.lint.isort]
known-first-party = ["dova"]
